--- a/myapp/templates/container/container_form.html
+++ b/myapp/templates/container/container_form.html
@@ -94,6 +94,16 @@
     .form-group button:hover {
       background-color: #0056b3;
     }
+    .form-group select { 
+      width: 100%; 
+      padding: 10px; 
+      font-size: 16px; 
+      border: 1px solid #ccc; 
+      border-radius: 4px; 
+    } 
+    .form-group select:focus { 
+      border-color: #1e3a8a; 
+    }
   </style>
 </head>
 <body>
@@ -138,6 +148,11 @@
             <div class="form-group">
               <label for="id_contents">Contents</label>
               {{ form.contents }}
+            </div>
+
+            <div class="form-group">
+              <label for="id_status">Status</label>
+              {{ form.status }}
             </div>
 
             <div class="form-group">
