--- a/myapp/templates/includes/sidebar.html
+++ b/myapp/templates/includes/sidebar.html
@@ -50,7 +50,11 @@
 
 <div class="sidebar">
     <img src="{% static 'images/logo.png' %}" alt="Logo">
-    <a href="#"><span class="icon">🏠</span> Dashboard</a>
+    {% if user.role == 'driver' %}
+        <a href="{% url 'driver_dashboard' %}"><span class="icon">🏠</span>Dashboard</a>
+        {% else %}
+        <a href="#"><span class="icon">🏠</span> Dashboard</a>
+        {% endif %}
     <a href="{% url 'customer_list' %}" class="{% if request.resolver_match.url_name == 'customer_list' %}active{% endif %}">
         <span class="icon">👤</span> Customer Hub
     </a>
